# algorithm

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
doc/ai/: autoML_categry.odg
src/: 2468_safetyArea.cpp  2667_aptNumbering.cpp  2×n_tiling.cpp  4991_cleaningRobot.cpp  CatchThatCow.cpp  DFSnBFS  DFSnBFS.cpp  RGB  RGB.cpp  The_Triangle.cpp  aptNumbering.cpp  array_rotation.cpp  circular_list.cpp  circular_queue.cpp  conti_sum.cpp  drink_wine.cpp  laboratory.cpp  laboratory2.cpp  mine.cpp  newcity.cpp  organicCabbage.cpp  pinary_number.cpp  stairsNum.cpp  tomato.cpp  warehouse.cpp
